🐛 fix: 버튼 가려지는 문제 -> z-index 부여

--- a/static/src/style.css
+++ b/static/src/style.css
@@ -662,6 +662,14 @@ pre {
   top: 0px;
 }
 
+.z-0 {
+  z-index: 0;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
 .m-0 {
   margin: 0px;
 }
